Testing with sakila db

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,5 +1,7 @@
-[connections.sql]
-dialect = "hei"
-host = "hostname"
+[connections.mysql]
+dialect = "mysql"
+host = "localhost"
+port = 3306
+database = "sakila"
 username = "root"
 password = "mason918"
