--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -2,6 +2,6 @@
 dialect = "mysql"
 host = "localhost"
 port = 3306
-database = "sakila"
+database = "GameStop"
 username = "root"
 password = "mason918"
